# speech

./: .gitignore
diarization/: diarization.py
diarization/nemo_diarization/: config.yaml  neural_diarization.ipynb
embeddings/: data_download.ipynb  setup.py
embeddings/DIEM/: DIEM.ipynb  notebook.ipynb
embeddings/deep-speaker-tensorflow/: cli.py  experiment.ipynb
embeddings/deep-speaker-tensorflow/deep_speaker/: conv_models.py  train.py
embeddings/deep-speaker/deep_speaker/: audio.py
embeddings/deep_speaker_pytorch/: Deep_Speaker_Pytorch.ipynb  audio.py  batcher.py  cli.py  constants.py  diem_loss.ipynb  model.py  requirements.txt  train.py  triplet_loss.py  utils.py
embeddings/titanet/: titanet.ipynb
seperation/ConvTasNet/: conv_tasnet_pytorch.ipynb  convtasnet.ipynb  pyproject.toml  requirements.txt
seperation/ConvTasNet/convtasnet/: config.yaml  dataset.py  loss.py  model.py  train.py
seperation/TasNet/: config.yaml  tasnet.ipynb  train.py
speaker_change_detection/: requirements.txt
speaker_change_detection/voxseg_tf/: dataset.py  model.py  train.py
voice_activity_detection/: marblenet.ipynb  marblenet_tensorflow.ipynb  marblenet_torch.ipynb
